Fix double border problem

--- a/src/style.css
+++ b/src/style.css
@@ -40,11 +40,11 @@ h1, h3 {
 .gameboard > div {
     aspect-ratio: 1 / 1;
     box-sizing: border-box;
-    border: solid black 1px;
 }
 
 .gameboard > .empty {
     background-color: white;
+    border: solid black 1px;
 }
 
 .gameboard > .hover {
@@ -52,6 +52,7 @@ h1, h3 {
 }
 
 .ship-container {
+    position: relative;
     width: clamp(300px, 1fr, 500px);
     display: flex;
     flex-direction: row;
